[package]
name = "api-param-viewer"
version = "0.1.0"
edition = "2021"
description = "A TUI tool for viewing and exploring LLM API parameter files"
license = "MIT"
repository = "https://github.com/Jex-y/api-param-viewer"
keywords = ["llm", "api", "tui", "json", "debugging"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
serde_json = "1.0.149"
